rice mill/force-app/main/default/objects/rice_detail__c/rice_detail__c.object-meta.xml
<CustomObject>
    <label>rice detail</label>
    <nameField>
        <displayFormat>rice-{000}</displayFormat>
        <label>rice detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>rice details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>