rice mill/force-app/main/default/objects/rice_detail__c/fields/rice_distributed__c.field-meta.xml
<CustomField>
    <fullName>rice_distributed__c</fullName>
    <label>rice distributed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>