rice mill/force-app/main/default/objects/rice_detail__c/fields/rice_mill_1_one__c.field-meta.xml
<CustomField>
    <fullName>rice_mill_1_one__c</fullName>
    <label>rice mill 1(one)</label>
    <referenceTo>rice_mill__c</referenceTo>
    <relationshipLabel>rice details</relationshipLabel>
    <relationshipName>rice_details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>