rice mill/force-app/main/default/objects/rice_detail__c/fields/supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>supplier_Name__c</fullName>
    <label>supplier Name</label>
    <referenceTo>supplier__c</referenceTo>
    <relationshipLabel>rice details</relationshipLabel>
    <relationshipName>rice_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>